kubernetes/preprod-shared/step-issuer.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    meta.helm.sh/release-name: step-issuer
    meta.helm.sh/release-namespace: preprod-shared
  labels:
    app.kubernetes.io/instance: step-issuer
    app.kubernetes.io/name: step-issuer
    app.kubernetes.io/version: 0.6.1
    control-plane: controller-manager
    helm.sh/chart: step-issuer-0.6.7
  name: step-issuer
  namespace: preprod-shared
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10

  selector:
    matchLabels:
      app.kubernetes.io/instance: step-issuer
      app.kubernetes.io/name: step-issuer
      control-plane: controller-manager
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2022-10-13T13:13:07-04:00"
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: step-issuer
        app.kubernetes.io/name: step-issuer
        app.kubernetes.io/version: 0.6.1
        control-plane: controller-manager
    spec:
      serviceAccountName: step-issuer
      containers:
        - args:
            - --secure-listen-address=0.0.0.0:8443
            - --upstream=http://127.0.0.1:8080/
            - --logtostderr=true
            - --v=10
          image: gcr.io/kubebuilder/kube-rbac-proxy:v0.8.0
          imagePullPolicy: IfNotPresent
          name: kube-rbac-proxy
          ports:
            - containerPort: 8443
              name: https
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        - args:
            - --metrics-addr=127.0.0.1:8080
            - --enable-leader-election
          command:
            - /manager
          image: cr.step.sm/smallstep/step-issuer:0.6.1
          imagePullPolicy: IfNotPresent
          name: manager
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 50Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 10
