kubernetes/preprod-shared/ca.yml
apiVersion: v1
kind: Service
metadata:
  name: certificate-authority
  namespace: preprod-shared
spec:
  type: NodePort
  ports:
    - port: 443
      targetPort: 8443
      name: https
  selector:
    app: certificate-authority

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certificate-authority
  namespace: preprod-shared
  labels:
    app: certificate-authority
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: certificate-authority
  template:
    metadata:
      labels:
        app: certificate-authority
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: step-ca
          persistentVolumeClaim:
            claimName: preprod-shared-ca
        - name: certificate-authority-password
          secret:
            secretName: certificate-authority-password
            defaultMode: 0400
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 8.8.8.8
      containers:
        - name: certificate-authority
          image: harbor.zevrant-services.internal/zevrant-services/step-ca:latest
#          command:
#            - /bin/bash
#          args:
#            - -c
#            - sleep 99999999999
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: step-ca
              mountPath: /opt/step-ca
            - mountPath: /var/zevrant-services/ca-password
              name: certificate-authority-password
