kubernetes/preprod-shared/keycloak-db.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
  namespace: preprod-shared
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: keycloak-db

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: preprod-shared
  name: keycloak-db
  labels:
    app: keycloak-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: keycloak-database
      containers:
        - name: keycloak-db
          image: containers.zevrant-services.com/zevrant/postgres:14
          imagePullPolicy: Always
          volumeMounts:
            - name: database
              mountPath: /opt/postgres/
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: 2Gi
              cpu: 500m
            limits:
              memory: 4Gi
              cpu: 1000m
          startupProbe:
            exec:
              command:
                - bash
                - -c
                - psql -U zevrant --dbname keycloak -c SELECT 1
            failureThreshold: 5
            successThreshold: 1
            periodSeconds: 7
          livenessProbe:
            initialDelaySeconds: 20
            exec:
              command:
                - bash
                - -c
                - psql -U zevrant --dbname keycloak -c SELECT 1
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 20
