kubernetes/preprod-shared/keycloak.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: preprod-shared
spec:
  type: NodePort
  ports:
    - port: 443
      targetPort: 8443
      nodePort: 30133
      name: https
    - port: 80
      targetPort: 80
      nodePort: 30137
      name: http
  selector:
    app: keycloak
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: preprod-shared
  labels:
    app: keycloak
spec:
  #  Additional config is needed to switch to HA mode
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
      volumes:
        - name: keycloak-cert
          secret:
            secretName: keycloak-tls
      imagePullSecrets:
        - name: regcred
      containers:
        - name: keycloak
          image: containers.zevrant-services.com/zevrant/keycloak:18.0.2
          imagePullPolicy: Always
          command:
            - /bin/sh
          args:
            - -c
            - /opt/keycloak/bin/kc.sh start
          volumeMounts:
            - name: keycloak-cert
              mountPath: /opt/acme/certs/
          ports:
            - containerPort: 8443
          startupProbe:
            httpGet:
              scheme: HTTPS
              path: /health/ready
              port: 8443
            periodSeconds: 5
            failureThreshold: 16 #max of 80 seconds
            successThreshold: 1
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /health/live
              port: 8443
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
