kubernetes/preprod-shared/vault.yml
apiVersion: v1
kind: Service
metadata:
  namespace: preprod-shared
  name: vault
spec:
  type: NodePort
  ports:
    - port: 8443
      targetPort: 8443
      nodePort: 30129
      name: https-nodeport
    - port: 80
      targetPort: 80
      name: http
      nodePort: 30626
    - port: 443
      targetPort: 8443
      name: https
  selector:
    app: vault

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: preprod-shared
  labels:
    app: vault
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
      volumes:
        - name: vault-data
          persistentVolumeClaim:
            claimName: vault
        - name: vault-cert
          secret:
            secretName: vault-tls
        - name: password-volume
          emptyDir:
            sizeLimit: "1Mi"
        - name: vault-keys
          secret:
            secretName: vault-key
            defaultMode: 0400
      imagePullSecrets:
        - name: regcred
      containers:
        - name: vault-unsealer
          image: containers.zevrant-services.com/zevrant/vault-unsealer:latest
          imagePullPolicy: "Always"
          volumeMounts:
            - mountPath: /var/zevrant-services
              name: password-volume
        - name: vault
          image: containers.zevrant-services.com/docker-remote/vault:latest
          command:
            - "/bin/sh"
          args:
            - "-c"
            - "ls -l /opt/acme/certs; ls -l /opt/acme/certs/..data/; docker-entrypoint.sh server"
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          imagePullPolicy: Always
          volumeMounts:
            - name: vault-data
              mountPath: /vault
            - name: vault-cert
              mountPath: /opt/acme/certs/
          ports:
            - containerPort: 8443
          resources:
            requests:
              memory: 8Gi
              cpu: 2000m
            limits:
              memory: 8Gi
              cpu: 2000m
          readinessProbe:
            httpGet:
              scheme: HTTPS
              path: /ui
              port: 8443
            failureThreshold: 5
            periodSeconds: 5
            initialDelaySeconds: 15
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /ui
              port: 8443
            failureThreshold: 5
            periodSeconds: 5
            initialDelaySeconds: 15
